# derivative-analysis

./: .gitignore
frontend/: package-lock.json  package.json
frontend/src/: App.css  index.css  main.jsx
frontend/src/components/: ActionToggle.jsx  components.css
frontend/src/components/hoc/: withData.jsx
frontend/src/hooks/: useTickers.jsx
frontend/src/pages/: index.js
frontend/src/pages/Tickers/: Tickers.jsx  index.js
frontend/src/utils/: axios.js
infra/: docker-compose.yaml
server/: pyproject.toml  requirements.txt
server/src/: main.py
server/src/cronjobs/: GetData.py
server/src/db/: initialize_db.py  session.py
server/src/models/: Option.py  Stock.py  Ticker.py
server/src/repo/: Stock.py  TickerRepo.py
server/src/requests/: tickers.py
server/src/routers/: tickers.py
server/src/services/: RiskFreeRate.py  YahooFinanceClient.py
server/src/utils/: OptionParser.py  StockParser.py  config.py
